--- a/Task02/T02_03.ipynb
+++ b/Task02/T02_03.ipynb
@@ -1276,7 +1276,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Strategy](Pics/RecognitionStrategy.jpg)"
+    "![Strategy](Pics/RecognitionStrategy.jpg)\n",
+    "![Strategy](https://github.com/Genn007/OMG_Recognition/blob/main/Task02/RecognitionStrategy.jpg)"
    ]
   },
   {
